feat(database): add postgres database support and models
- Add database configuration in env.example and docker-compose
- Include required database dependencies in requirements.txt
- Implement async database connection and session management
- Create models for Session, Chat and Message entities
- Add initialization script for database tables

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,22 @@ services:
     networks:
       - scraper
 
+  db:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
+      POSTGRES_DB: ${DB_NAME:-deepseek_db}
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - scraper
+
 networks:
   scraper:
     external: true
+
+volumes:
+  postgres_data:
