--- a/env.example
+++ b/env.example
@@ -3,3 +3,10 @@ browserless_url=ws://localhost:3000
 cookies=core/cookies.json
 user=mail@gmail.com
 password="yourpass@#$"
+
+# Database
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=deepseek_db
