build(docker): add docker configuration files and update requirements
Add Dockerfile and .dockerignore for containerization
Update requirements.txt to use more flexible version ranges

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-playwright==1.57.0
-dotenv==0.9.9
-ua-generator==2.0.19
-aiofiles==25.1.0
-requests==2.32.5
-fastapi==0.126.0
-uvicorn==0.38.0
-pydantic==2.12.5
-sqlalchemy==2.0.36
-asyncpg==0.30.0
-psycopg2-binary==2.9.10
-alembic==1.14.0
-python-dotenv==0.9.9
+playwright>=1.40.0
+python-dotenv>=1.0.0
+ua-generator>=2.0.0
+aiofiles>=23.1.0
+requests>=2.31.0
+fastapi>=0.100.0
+uvicorn>=0.23.0
+pydantic>=2.0.0
+sqlalchemy>=2.0.0
+asyncpg>=0.28.0
+psycopg2-binary>=2.9.0
+alembic>=1.11.0
